# chris-utils

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: unit-tests.yml
chris_utils/: __init__.py  utils.py
chris_utils/cog_zarr/: eopf_utils.py  geo.py  hdr_parser.py  header.py  reader.py  transformer.py
chris_utils/eo_sip/: __init__.py  eo_sip_converter.py  information_xml_generator.py  metadata_xml_generator.py
chris_utils/geometry/: chris_georef.py
chris_utils/safe/: __init__.py  dat_xml_generator.py  manifest_xml_generator.py  measurement_metadata_generator.py  metadata_config.py  mos-object-types.xsd  mos_file_generator.py  safe_maker.py  safe_manifest_file_compressed.py  safe_measurement_metadata_xml_generator.py  safe_metadata_xml_generator.py
tests/: test_eo_sip.py  test_utils.py
tests/cog_zarr/: conftest.py  test_eopf_utils.py  test_geo.py  test_hdr_parser.py  test_header.py  test_reader.py
tests/eo_sip/: test_eo_sip_converter.py
tests/safe/: test_manifest_xml_generator.py  test_metadata_config.py  test_safe_maker.py  test_safe_metadata_xml_generator.py
