# Copyright 2024 Telespazio UK Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "chris-utils"
version = "0.0.1"
description = "Utilities for use with CHRIS"
readme = "README.md"

requires-python = ">=3.11"

license = {file = "LICENSE"}

authors = [
 {name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com" }
]

maintainers = [
 {name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",

  "License :: Other/Proprietary License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pydantic_xml",
    "lxml",
    "xarray[io]",
    "pillow",
    "pandas",
    "eopf>=2.5.9,<2.6.0",  # purposely added the version as the latest doesn't seem to be stable.
    "numpy>=2.3.0",
    "xarray>=2024.11.0",
    "rasterio>=1.3.10",
    "rio-cogeo>=5.4.1",
    "zarr>=2.15.0,<3.0.0",
    "dask[array]>=2024.5.2,<2025.0.0",
    "pvlib",
]

[project.optional-dependencies] # Optional
dev = [
    "pip-tools",
    "pytest",
    "pytest-mock",
    "pyfakefs",
    "black",
    "ruff",
    "coverage",
    "isort",
    "validate-pyproject[all]",
    "pre-commit",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=69.0.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chris_utils", "chris_utils.eo_sip", "chris_utils.safe", "chris_utils.cog_zarr"]
include-package-data = true

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-data]
chris_utils = ["*.json", "*.xsd"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integrationtest: Integration test"
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.pylint.'MESSAGES CONTROL']
disable = '''
    line-too-long,
    missing-class-docstring,
    too-many-locals,
    too-many-instance-attributes,
    logging-fstring-interpolation,
'''

[tool.isort]
profile = "black"